# GraphicPresentation

./: CMakeLists.txt  README.md
GraphicsEngine/: GraphicsEngine.cpp  GraphicsEngine.h
include/DataProcessing/: DataProcessor.cpp  DataProcessor.h
include/ThirdPartyLibraries/OpenGL/glad/: glad.c  glad.h
include/Visualisation/: ChartRenderer.cpp  ChartRenderer.h
src/: main.cpp
